sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: type Bool
  var tri : Bool = true;
            ^AlgBubbleSort1:14: error: not found: value j
        swap(i,j);
               ^